--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-03.cleardb.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=heroku_19ca6b2641823ff
+DB_USERNAME=bee6fd2ca3d432
+DB_PASSWORD=9de050e7
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
